--- a/TAREA4/Parametros.ini
+++ b/TAREA4/Parametros.ini
@@ -1,3 +1,3 @@
-Ruta del Navegador Web:  C:\PROGRA~2\Google\Chrome\Application\chrome.exe
-Extension del archivo:   .html
-Otra Variable:           123C:\PROGRA~2\MOZILL~1\firefox.exe
+Ruta del Navegador Web:  	C:\PROGRA~2\Google\Chrome\Application\chrome.exe
+Ruta del editor de texto: 	C:\PROGRA~1\NOTEPA~1\NOTEPA~1.exe
+Otra Variable:           	123C:\PROGRA~2\MOZILL~1\firefox.exe
